<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">TV Trivia</string>
    <string name="choose_show">Choose TV Series</string>
    <string name="money_heist">Money Heist</string>
    <string name="brooklyn_99">Brooklyn 99</string>
    <string name="friends">Friends</string>
    <string name="sherlock">Sherlock</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="tv_trivia">TV Trivia</string>
    <string name="about_text">TV Trivia is an app designed for fun. The quizzes on your favourite TV series will take you back to the journey you went through when you first started watching the series, as you think hard about the questions.\n\nThe app is developed by Sejal Gupta:\n\n\"This is my first app ever. I found App Development quite interesting and I plan to continue making better apps.\"</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to trying different shows using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_money_trivia_question">Money Heist Trivia (%1$d/%2$d)</string>
    <string name="title_sherlock_trivia_question">Sherlock Trivia (%1$d/%2$d)</string>
    <string name="title_friends_trivia_question">F. R. I. E. N. D. S Trivia (%1$d/%2$d)</string>
    <string name="title_brooklyn_trivia_question">Brooklyn Nine-Nine Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About TV Trivia</string>
    <string name="title_trivia_rules">TV Trivia Rules</string>
    <string name="title_trivia_developer">About the Developer</string>
    <string name="share_success_text">I got %1$d/%2$d correct questions in TV Trivia! You should play it too!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="select_show_text">Select a TV show to play it\'s Trivia</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
